-provide offset anchors so nav-links jump to correct spot

--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,28 @@ h1 {
 	padding: 1em;
 	overflow: auto;
 }
+
+#anchor-story {
+	display: block;
+    position: relative;
+    visibility: hidden;
+    top: -7.9em;
+}
+
+#anchor-work {
+	display: block;
+    position: relative;
+    visibility: hidden;
+    top: -7.9em;
+}
+
+#anchor-imagination {
+	display: block;
+    position: relative;
+    visibility: hidden;
+    top: -7.9em;
+}
+
 #work {
 	min-height: 10em;
 	margin-top: 0em;
